--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,13 @@
 @import "./assets/scss/variable";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
-.box-layout{
-  padding: 0
-}
+// .box-layout {
+//   padding: 0
+// }
 
 @import "./assets/scss/component/header";
 @import "./assets/scss/component/footer";
 @import "./assets/scss/page/home";
+@import "./assets/scss/flipbook.style.css";
+@import "./assets/scss/bookshelf.css";
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
