--- a/src/assets/scss/page/courses.scss
+++ b/src/assets/scss/page/courses.scss
@@ -1,8 +1,8 @@
 .classes-card {
     padding: 1rem;
-    border: 24px solid #feb546;
+    border: 1.2rem solid #feb546;
     background: none;
-    box-shadow: 2px 2px 5px;
+    box-shadow: 0.1rem 0.1rem 0.5rem;
 
     img {
         margin: 1rem auto;
