Flipbook logic completed.

--- a/src/assets/scss/bookshelf.css
+++ b/src/assets/scss/bookshelf.css
@@ -2,8 +2,9 @@
   display: inline-block;
   cursor: pointer;
   margin: 0px 0.5%;
-  width: 15% !important;
   box-shadow: 4px 4px 5px rgba(0, 0, 0, .3);
+  /* width: 15% !important; */
+  /* min-width: 100px; */
   max-width: 180px;
 }
 
