logo and hero section content added

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,32 +21,26 @@
       filter: invert(1);
     }
   }
+  .menu-bg {
+    .navbar-brand {
+      position: relative;
+      padding: 0;
+      border-radius: 0;
+      filter: none;
 
-  .selfImage:after {
-    bottom: -35px;
+      img {
+        width: 120px;
+      }
+    }
   }
 }
 
-@media only screen and (max-width: 320px) {
-  .selfImage:after {
-    bottom: -20px;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .selfImage:after {
-    bottom: -25px;
-  }
-}
-
-@media only screen and (min-width: 1024px) {
-  .selfImage:after {
-    bottom: -30px;
-  }
-}
-
-@media only screen and (max-width: 1440px) {
-  .selfImage:after {
-    bottom: -35px;
+@media only screen and (max-width: 1024px) {
+  .menu-bg {
+    .navbar-brand {
+      img{
+        width: 150px;
+      }
+    }
   }
 }
