--- a/src/assets/scss/bookshelf.css
+++ b/src/assets/scss/bookshelf.css
@@ -2,7 +2,7 @@
   display: inline-block;
   cursor: pointer;
   margin: 0px 0.5%;
-  box-shadow: 4px 4px 5px rgba(0, 0, 0, .3);
+  box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.3);
   /* width: 15% !important; */
   width: 15vw;
   min-width: 100px;
@@ -22,7 +22,7 @@
 
 .bookshelf span:last-child {
   width: 100%;
-  background: rgba(0, 0, 0, .5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .bookshelf .thumb img {
@@ -58,18 +58,53 @@
   margin-bottom: 5rem;
 }
 
-.selfImage:after {
-  content: '';
-  background-image: url('../images/shelf_glass.png');
+.selfImage .thumb {
+  position: relative;
+}
+
+.selfImage .thumb:after {
+  content: "";
+  background-image: url("../images/shelf_glass.png");
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: 50% 100%;
+  background-position: 0 100%;
   position: absolute;
-  bottom: -45px;
-  width: 100%;
-  height: 50px;
-  left: 0;
+  bottom: -25px;
+  width: 300px;
+  height: 80px;
+  left: auto;
   z-index: -1;
+  right: -55px;
+  margin: 0 auto;
+}
+@media only screen and (max-width: 320px) {
+  .selfImage .thumb:after {
+    right: -93px !important;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .selfImage .thumb:after {
+    right: -93px !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .selfImage .thumb:after {
+    right: -93px !important;
+  }
+}
+
+@media (min-width: 1024px) {
+  .selfImage .thumb:after {
+    right: -70px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .selfImage .thumb:after {
+    right: -53px;
+  }
 }
 
 /* 
