--- a/src/assets/scss/component/_header.scss
+++ b/src/assets/scss/component/_header.scss
@@ -1,8 +1,20 @@
 .menu-bg {
   background-color: $headerColor;
 
-  img {
-    filter: invert(1);
+  .navbar-brand {
+    position: absolute;
+    top: 0px;
+    padding: 10px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    background: #ffffff;
+    overflow: hidden;
+    filter: drop-shadow(0px 5px 2px #ddd);
+    img {
+      width: 200px;
+      border-bottom-left-radius: 30px;
+      border-bottom-right-radius: 30px;
+    }
   }
 
   .navbar {
